# rizzybox

./: .dockerignore  .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: build-rizzybox.yml  release-rizzybox.yml
src/: cat_command.rs  cli.rs  echo_command.rs  lib.rs  main.rs  which_command.rs
src/command/: basename.rs  cat.rs  chroot.rs  clear.rs  dirname.rs  echo.rs  env.rs  expand.rs  false.rs  ln.rs  ls.rs  mkdir.rs  mod.rs  nproc.rs  pathmunge.rs  sh.rs  sleep.rs  stem.rs  true.rs  uname.rs  which.rs  yes.rs
tests/: integration_basename.rs  integration_cat.rs  integration_clear.rs  integration_echo.rs  integration_env.rs  integration_false.rs  integration_stem.rs  integration_true.rs  integration_uname.rs  integration_which.rs  integration_yes.rs
