[package]
name = "rizzybox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
bat = "0.24.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = "4.5.33"
libc = "0.2.171"
rustix = { version = "1.0.5", features = ["fs", "mount", "process", "system"] }

[dev-dependencies]
assert_cmd = { version = "2.0.16" }
predicates = "3.1.2"
rusty-hook = "0.11.2"

[workspace.lints.clippy]
unwrap_used = "deny"

