[package]
name = "rizzybox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bat = { version = "0.25.0", default-features = false, features = ["regex-fancy"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
clap_complete = "4.5.59"
num_cpus = "1.17.0"
rustix = { version = "1.1.2", default-features = false, features = ["process", "system"] }

# [profile."*".package]
# regex = { hint-mostly-unused = true }
# serde = { hint-mostly-unused = true }

# [profile.dev.package."*"]
# hint-mostly-unused = true

[dev-dependencies]
assert_cmd = { version = "2.0.17" }
predicates = "3.1.3"
rusty-hook = "0.11.2"

[workspace.lints.clippy]
unwrap_used = "deny"

